Добавил класс <h1> Отредоктировал <title>

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 
 	<head>
-<title>Test Notepad</title>
+<title>Портфолио BLVCKBEAR</title>
 	</head>
 	<body>
-	Main
+	<center><h1>Сайт в стадии разработки! Моё Портфолио проектов в разных направлениях.</h1></center>
 	</body>
 </html>
