--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
 
 	<head>
-<title>Портфолио BLVCKBEAR</title>
+        <meta charset="utf-8">
+        <title>Портфолио BLVCKBEAR</title>
+        <link rel="stylesheet" href="main.css">
 	</head>
 	<body>
 	<center><h1>Сайт в стадии разработки! Моё Портфолио проектов в разных направлениях.</h1></center>
